--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
         "webpack-dev-server": "4.10.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.10.3",
+        "@mui/material": "^5.10.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0"
     }
