--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@mui/icons-material": "^5.10.3",
         "@mui/material": "^5.10.3",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^6.3.0"
     }
 }
