--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
                 "endOfLine": "auto"
             }
         ],
-        "@typescript-eslint/no-unused-vars": ["warn", {"ignoreRestSiblings": true}],
+        "@typescript-eslint/no-unused-vars": "off",
         "react/jsx-filename-extension": [
             "warn",
             {
@@ -36,7 +36,10 @@
         "react/prop-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
-        "no-shadow": ["error", {"builtinGlobals": false, "hoist": "functions", "allow": []}]
+        "no-shadow": "off",
+        "@typescript-eslint/no-non-null-assertion'": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     },
     "settings": {
         "react": {
